Moved ruler units label to work around layout issue
# 0.00.38 (64551) May 31, 2012
Thermometer "roll-over" style changes (larger, and to the side)
# 0.00.37 (64541) May 31, 2012
Integration of same-thread Piccolo rendering for tools so they don't lag by multiple frames
Fixed multiple bugs with the thermometer node and the "mini" thermometers
Fixed temperature model for the 1st (crust) tab
Initial mini-thermometers shown to scale, but with threading issues
Added initial version of thermometer wrapping, rewrote temperature handling
Added in the correct radial mapping inverse for sensors, so they function normally when zoomed out
Fixed temperature issue where it went below absolute zero in the atmosphere
Performance improvements
# 0.00.36 (63925) May 3, 2012
# 0.00.35 (63911) May 2, 2012
Fixed jitter on 1st tab labels during zoom
Labeling on 2nd tab (demo version)
# 0.00.34 (63770) Apr 26, 2012
Initial density meter "scaling" based on zoom level.
# 0.00.33 (63768) Apr 26, 2012
Initial thermometer "scaling" based on zoom level.
Ruler handles zooming by resizing in "even decimal" increments
Thermometer / density meter handle zooming by staying at a constant "screen" size.
# 0.00.32 (63628) Apr 19, 2012
# 0.00.31 (63331) Apr 11, 2012
Instrumented 2nd tab
Instrumented 1st tab
Fixed young-young automatic handling on 2nd tab (by default, will select divergent motion)
Updated with SpeedometerNode changes (SR)
# 0.00.30 (62920) Apr 2, 2012
Fixed smoke variation with step size
Fixed plate "smoothing" in divergent and subduction cases, fixing the main "step" bug
Significant model changes for a better working "subduction/overriding" model that works with the step button (still work to go on it)
# 0.00.29 (62874) Mar 29, 2012
Removed "Step" button temporarily
Fixed continental-continental collisions for handling any timestep size (fixes the "step" bug for this motion type)
Fixed mountain size consistency in continental-continental collision for the 2nd tab